--- a/Bin/EditorSettings.json
+++ b/Bin/EditorSettings.json
@@ -1,13 +1,13 @@
 {
     "Version": 11,
-    "Theme": 2,
-    "CamMoveSpeed": 100.0,
+    "Theme": 0,
+    "CamMoveSpeed": 12.356887817382813,
     "CamScrollSpeed": 30.700000762939453,
     "CamTurnSpeed": 21.700000762939453,
     "ClearColor": {
-        "r": 0.250432550907135,
-        "g": 0.6800962686538696,
-        "b": 0.9460784196853638,
+        "r": 0.45098036527633667,
+        "g": 0.45098036527633667,
+        "b": 0.45098036527633667,
         "a": 1.0
     },
     "OutlineColor": {
@@ -17,21 +17,21 @@
         "a": 1.0
     },
     "MainColor": {
-        "r": 0.17762398719787598,
-        "g": 0.1910577416419983,
-        "b": 0.21568626165390015,
+        "r": 1.0,
+        "g": 1.0,
+        "b": 1.0,
         "a": 1.0
     },
     "SecondaryColor": {
-        "r": 0.9754902124404907,
-        "g": 0.9016533493995667,
-        "b": 0.6168541312217712,
+        "r": 1.0,
+        "g": 1.0,
+        "b": 1.0,
         "a": 1.0
     },
     "TextColor": {
         "r": 1.0,
-        "g": 0.9867358803749084,
-        "b": 0.8872548937797546,
+        "g": 1.0,
+        "b": 1.0,
         "a": 1.0
     },
     "Snap Settings": {
@@ -54,14 +54,10 @@
     },
     "Debug Drawer Toggle": false,
     "Open Windows": [
-        17,
-        7,
-        10,
+        4,
+        3,
         1,
         0,
-        4,
-        12,
-        3,
         2
     ],
     "IP": "127.0.0.1",
