--- a/Bin/imgui.ini
+++ b/Bin/imgui.ini
@@ -21,10 +21,10 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][General Tools]
-Pos=8,27
-Size=222,982
+Pos=201,266
+Size=264,86
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000005,0
 
 [Window][Physics]
 Pos=316,27
@@ -33,14 +33,14 @@ Collapsed=0
 DockId=0x00000003,1
 
 [Window][Console]
-Pos=232,832
-Size=1680,177
+Pos=316,773
+Size=1596,236
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000009,0
 
 [Window][Asset Browser]
-Pos=232,832
-Size=1680,177
+Pos=316,773
+Size=1596,236
 Collapsed=0
 DockId=0x00000009,0
 
@@ -48,23 +48,23 @@ DockId=0x00000009,0
 Pos=202,354
 Size=264,90
 Collapsed=1
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1536,27
-Size=376,803
+Pos=1626,27
+Size=286,744
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=8,27
-Size=222,982
+Size=306,982
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][###SceneWindow]
-Pos=232,27
-Size=1302,803
+Pos=316,27
+Size=1308,744
 Collapsed=0
 DockId=0x00000003,0
 
@@ -106,26 +106,25 @@ Size=512,256
 Collapsed=0
 
 [Window][SavedScene]
-Pos=756,87
-Size=118,44
+Pos=901,96
+Size=136,51
 Collapsed=0
 
 [Window][Autosave]
-Pos=873,112
-Size=166,62
+Pos=901,96
+Size=136,51
 Collapsed=0
 
 [Window][Catbox Settings]
-Pos=1536,27
-Size=376,803
+Pos=1626,27
+Size=286,744
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][Performance Statistics]
-Pos=1536,27
-Size=376,803
-Collapsed=0
-DockId=0x00000004,2
+Pos=1174,513
+Size=242,97
+Collapsed=1
 
 [Window][NoCamera]
 Pos=867,96
@@ -144,23 +143,13 @@ ViewportId=0xACC3B310
 Size=310,690
 Collapsed=0
 
-[Window][Kitchen Editor Window]
-Pos=232,832
-Size=1680,177
-Collapsed=0
-DockId=0x00000009,2
-
-[Window][Chat]
-Pos=412,237
-Size=201,100
-Collapsed=1
-
 [Docking][Data]
+DockNode        ID=0x00000005 Pos=202,377 Size=264,90 Selected=0x3FACDCE0
 DockSpace       ID=0xB62E29B4 Window=0x9611CCF2 Pos=8,50 Size=1904,982 Split=X
-  DockNode      ID=0x00000001 Parent=0xB62E29B4 SizeRef=222,982 Selected=0x29EABFBD
-  DockNode      ID=0x00000002 Parent=0xB62E29B4 SizeRef=1680,982 Split=Y
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1904,803 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1302,982 CentralNode=1 Selected=0x0433EDD3
-      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=376,982 Selected=0x199AB496
-    DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=1904,177 Selected=0x6F7CD859
+  DockNode      ID=0x00000001 Parent=0xB62E29B4 SizeRef=306,982 Selected=0x29EABFBD
+  DockNode      ID=0x00000002 Parent=0xB62E29B4 SizeRef=1596,982 Split=Y
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1904,744 Split=X
+      DockNode  ID=0x00000003 Parent=0x00000008 SizeRef=1308,982 CentralNode=1 Selected=0x0433EDD3
+      DockNode  ID=0x00000004 Parent=0x00000008 SizeRef=286,982 Selected=0xC6CB08D3
+    DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=1904,236 Selected=0x6F7CD859
 
